--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,6 +43,15 @@
     box-sizing: border-box;
 }
 
+.blur-bg::before {
+  content: "";
+  position: absolute;
+  inset: 0; /* top:0; right:0; bottom:0; left:0 */
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(24px);
+  z-index: -50;
+}
+
 .header--menu-shown {
     @apply bg-white;
 }
@@ -147,9 +156,17 @@
 .feedback select {
     padding: 0;
     padding-top: 16px;
-    padding-bottom: 12px;
+    padding-bottom: 6px;
     font-size: 16px;
     transition: 0.3s;
+}
+
+@media (min-width: 1280px) {
+    .feedback input,
+    .feedback textarea,
+    .feedback select {
+        font-size: 20px;
+    }
 }
 
 .feedback input:placeholder-shown + label,
