--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,11 +42,14 @@
 *::after {
     box-sizing: border-box;
 }
-
+.blur-bg {
+  position: relative;
+  z-index: 0;
+}
 .blur-bg::before {
   content: "";
   position: absolute;
-  inset: 0; /* top:0; right:0; bottom:0; left:0 */
+  inset: 0;
   backdrop-filter: blur(24px);
   -webkit-backdrop-filter: blur(24px);
   z-index: -50;
