--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -51,7 +51,7 @@
     position: absolute;
     inset: 0;
     backdrop-filter: blur(24px);
-    z-index: -50;
+    z-index: -100;
 }
 
 .accordion {
@@ -71,7 +71,7 @@
 }
 
 .scrolled a {
-    @apply text-secondary;
+    @apply xl:text-secondary;
 }
 
 .navbar-link {
@@ -257,4 +257,17 @@
     to {
         stroke-dashoffset: 0;
     }
+}
+
+.mb-services__spec {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.mb-services__spec::before {
+    content: attr(data-title) " ";
+    color: #575757;
+    font-weight: 400;
+    font-size: 16px;
 }
