--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -264,10 +264,67 @@
     flex-direction: column;
 }
 
-
 .mb-services__spec::before {
     content: attr(data-title) " ";
     color: #575757;
     font-weight: 400;
     font-size: 16px;
+}
+
+@media (min-width: 1024px) {
+    .mb-additional-services__name::before {
+        content: attr(data-title) " ";
+        color: #0e1014;
+        font-weight: 500;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+.mb-additional-services__price-install::before,
+.mb-additional-services__price-monthly::before {
+    content: attr(data-title) " ";
+    color: #0e1014;
+    font-weight: 500;
+    font-size: large;
+}
+
+@media (min-width: 1024px) {
+    .mb-additional-services__name::before,
+    .mb-additional-services__price-install::before,
+    .mb-additional-services__price-monthly::before {
+        display: none;
+    }
+}
+
+.mb-additional-services__content-item:not(:last-child) {
+    padding-bottom: 20px;
+    border-bottom: 1px dashed #eaeaea;
+}
+
+@media (min-width: 1024px) {
+    .mb-additional-services__content-item:not(:last-child) {
+        border-bottom: none;
+    }
+}
+
+@media (min-width: 1024px) {
+    .mb-additional-services__name {
+        position: relative;
+        overflow: hidden;
+    }
+    .mb-additional-services__name:after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        bottom: 6px;
+        margin-left: 20px;
+        border-bottom: 2px dotted #eaeaea;
+    }
+}
+
+.mb-additional-services__price-monthly,
+.mb-additional-services__price-install {
+    width: 70px;
+    text-align: end;
 }
